# 2025-internetlab-server

./: .gitignore  CMakeLists.txt
app/: main.cpp
include/helper/: gettime.hpp  segment.hpp  segment_header.hpp
include/server/: logger.hpp  receiver.hpp  sender.hpp  server.hpp
src/helper/: segment.cpp  segment_header.cpp
src/server/: receiver.cpp  sender.cpp  server.cpp
